apps/media/sonarr/templates/deployment.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  serviceName: sonarr
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      name: sonarr
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: ghcr.io/linuxserver/sonarr:4.0.9
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: "1"
              memory: 1Gi
          ports:
            - containerPort: 8989
              protocol: TCP

          volumeMounts:
            - mountPath: /media
              name: media
            - mountPath: /config
              name: config

      volumes:
        - name: media
          hostPath:
            path: /data/media
            type: Directory
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config-new
